--- a/SpringSecurityFormLogin/pom.xml
+++ b/SpringSecurityFormLogin/pom.xml
@@ -52,7 +52,11 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
